# phone-format

./: README.md  format_phone.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
phone_format/: format_phone.py
test/: test_format_phone.py
