[tool.poetry]
name = "phone-format"
version = "0.1.0"
description = "This project includes different phone formatting"
authors = ["Jean Eric TUYISHIMIRE <81187224+tjeaneric@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
